environment/allIngress/ingress-jenkins-the-same-with-helmchart.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: jenkinsingress
  namespace: cicd
spec:
  rules:
    - host: jenkins.cryptosignaller.net
      http:
        paths:
          - backend:
              servicePort: 8080
              serviceName: jenkins-master
#              port: 8080
            path: /
  # This section is only required if TLS is to be enabled for the Ingress
#  tls:
#      - hosts:
#          - www.example.com
#        secretName: example-tls
